--- a/style.css
+++ b/style.css
@@ -195,10 +195,10 @@ footer .footer_content{
       display: none;
   }
   .video500 {
+      display: flex;
       flex-direction: column;
-      justify-content: left;
-      width: 300px;  left: 300px;
-      height: 450px; padding-left: 30px;
+      width: 300px;
+      height: 450px; right: 50px;
   }
 
   /* Дополнительный контент */
@@ -211,11 +211,13 @@ footer .footer_content{
   /* Контактный блок */
   .contact {
     position: relative;  /* делаем позиционирование относительным, чтобы он шел по потоку */
-    width: 100%;
-    right: 400%;
+     width: 100%;
+    left: -8%;
     font-size: 1.25rem;
     margin: 10px auto; top: 245px;
   }
+
+
 
   /* Footer */
   footer .footer_content {
