--- a/style.css
+++ b/style.css
@@ -1,251 +1,126 @@
 html, body {
-    margin: 0;
-    padding: 0;
+    margin: 0; padding: 0;
+    overflow-x: hidden; /* Убираем лишний горизонтальный скролл */
+    min-height: 105vh;  /* Гарантируем, что страница длиннее экрана */
+    padding-bottom: 8vh;
+
 }
-.content{
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+.video-container {
+    display: flex;
+    width: 100vw; /* Заполняет всю ширину экрана */
+    height: auto; /* Высота адаптируется автоматически */
+    z-index: -1;
+    .bg-video {
+        width: 100vw; /* Растягивается на всю ширину родителя */
+        height: 20vh; /* Заполняет всю высоту экрана */
+        object-fit: cover; /* Обрезает видео, чтобы оно заполнило область */
+        overflow-x: hidden;
+    }
+
+}
+header {
+     background: rgba(00, 00, 00, 0.3);
+      z-index: 10; position: sticky; top: 0;
+     border: grey solid 1px;
+}
+
+ nav ul {
+     display: flex; justify-content: center; gap: 25vw; padding: 0;
+     list-style: none;
+ }
+
+nav ul a {
+    text-decoration:  none; font-size: clamp( 18px, 3vw, 25px); color: mintcream;
+
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 10;
+    align-items: center;
+    top: -20vh;
     position: relative;
-    text-align: center;
-    font-size: xxx-large;
-}
-.content h2{
-    color: white;
+    font-size: 4vw;
+    animation: fadeIn 5s ease-in-out;
 }
 
-header{
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 2;
-    padding: 10px 0;
-    position: sticky;
-    top: 0;
-    width: 100vw;
+hr{
+  width: 50vw;
+}
+h2{ margin-top: 0; color: white; }
+h1{ margin-bottom: 0; }
 
-}
-nav ul {
-  display: flex;
-  justify-content: right;
-  list-style: none;
-  margin: 0;
-  padding-right: 30px;
-
-}
-
-nav li {
-  margin: 0 15px;
-}
-nav a {
-    color: white;
-    text-decoration: none;
-    font-size: 25px;
-}
- .bg-video{
-    border: black  1px solid;
-    width: 100vw; height: 100vh;
-    object-fit: cover; /* Видео заполняет весь экран */
-    z-index: -1; /* Уходит на задний план */
-
-}
- .content{
-  position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #000000;
-    font-size: 2rem;
-    opacity: 0; /* Начальное состояние: невидимо */
-    animation: fadeIn 4s ease-in forwards;
-    z-index: 1;
-  }
- @keyframes fadeIn {
+@keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
 }
 
-section.partners_block {
-  display: flex;
-  flex-direction: row;      /* Выстраивает элементы в строку */
-  justify-content: center;  /* Центрирует блоки по горизонтали */
-  align-items: center;      /* Выравнивает блоки по вертикали */
-  gap: 20px;                /* Задает расстояние между элементами */
+section, .partners_block {
+   display: flex;  flex-direction: row-reverse; justify-content: center; align-items: center;
+   position: relative; top: -14vh; gap: 1vw;
 }
-.partners_block{
-    position: relative;
-    width: 100vw;
-    height: 800px;
-}
-.video509{
-    width: 450px; height: 600px;
-    position: absolute;
-    right: 50px;  top: 30px;
-}
-.video500{
-    width: 450px; height: 600px;
-    object-fit: cover;
-    position: absolute;
-    top: 32px;
-}
-.content_2{
-    position: relative;
-    font-size: x-large;
-    width: 30%;
-    height: 99%;
-    left: -30vw;
-}
-.contact{
-    position: absolute;
-    width: auto;
-    border: grey 2px solid; border-radius: 5px;
-    left: 5%; bottom: 35%;
-    font-size: x-large;
-    background-color: black;
-    padding: 20px;
-}
-.contact a{
-    color: white; text-decoration:  none;
 
+.video500, .video509 {
+    width: 100%;     position: relative; margin-top: -6vh;
+    max-width: 100px;
+    height: 35vh;
+    object-fit: cover;
+}
+
+.video509 { margin-right: 2.3vw }
+
+.contact {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    top: -24vh;
+}
+.contact a {
+    display: flex;
+    padding: 3vw;
+    margin-right: 8vw;
+    border: grey solid 1px;
+    width: 32vw;
+    background: black;
+    border-radius: 1vw;
+    color: white;      text-decoration:  none;
+    position: absolute;
 }
 .contact a:hover{
     color: grey;
 }
-footer .footer_content{
-    position: relative;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 30px; padding-bottom: 5px;
-}
-.footer_info{
-    position: relative;
-    text-align: center;
-}
-.footer-links{
-    display: flex;
-    position: relative;
-    justify-content: right ; gap: 10px;
-}
-.footer-links a{
-    text-decoration:  none;
-    color: black;
-}
-.footer-links a:hover{
-    color: grey;
+.hr hr{ width: 100vw}
+
+.content_2{ padding: 2vw;}
+
+.footer_content{
+    position: relative; bottom: 14vh;
+    border:  grey solid 1px;
+
 }
 .footer-social{
     display: flex;
-    position: relative;
-    gap: 50px; bottom: 175px;
-    justify-content: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-items:  center;
 }
-.footer-social a{
-    text-decoration:  none;
-    color: black;
-    font-size: large;
-}
-.footer-social a:hover{
-    color: grey;
-}
-@media screen and (max-width: 600px) {
-  /* HEADER и навигация */
-  header {
-    position: absolute;
-    text-align: center;
-    width: 100%;
-
-  }
-
-  nav ul {
+.footer_info {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 0; margin: 0;
-    list-style: none;
-    gap: 10vw;
-  }
-
-  nav li {
-    margin: 5px 0;
-  }
-
-  nav a {
-    font-size: 20px;
-  }
-
-  /* Фоновое видео */
-  .bg-video {
-    width: 100%;
-    height: 50vh;   /* Высота видео уменьшена до 50% от высоты экрана */
-
-  }
-
-  /* Контент, наложенный на видео */
-  .content {
-    font-size: 1.5rem;   /* уменьшаем надпись, чтобы она менее доминировала */
-    padding: 0 10px;
-    margin-top: -150px;
-  }
-
-  /* Блок партнеров */
-  section.partners_block,
-  .partners_block {
-    display: flex; flex-direction: row; justify-content: space-around ;
-    padding: 10px; height: min-content;
-  }
-
-  /* Видео в блоке партнеров */
-  .video509{
-      display: none;
-  }
-  .video500 {
-      display: flex;
-      flex-direction: column;
-      width: 300px;
-      height: 450px; right: 50px;
-  }
-
-  /* Дополнительный контент */
-  .content_2 {
-    width: 90%;
-    left: 0;         /* убираем сдвиг влево */
-    font-size: 1.25rem;
-  }
-
-  /* Контактный блок */
-  .contact {
-    position: relative;  /* делаем позиционирование относительным, чтобы он шел по потоку */
-     width: 100%;
-    left: -8%;
-    font-size: 1.25rem;
-    margin: 10px auto; top: 245px;
-  }
-
-
-
-  /* Footer */
-  footer .footer_content {
-    display:  flex; flex-direction: column;
-    padding: 0; height: 1px;
-    margin-top: 50px;
-  }
-
-  .footer-links,
-  .footer-social {
-    flex-direction: row;
-    justify-content: space-between;
-
-  }
-
-  .footer-links a,
-  .footer-social a {
-    font-size: 1rem;
-    padding-right: 25px; padding-left: 10px;
-  }
+    justify-content: flex-start;
+    font-size: small; padding-left: 1vw; padding-right: 1vw;
 }
+.footer_info p:first-child  { text-align: left;   }
+.footer_info p:nth-child(2) { text-align: center; }
+.footer_info p:last-child   { text-align: right;  }
 
-
-
-
-
-
-
-
-
-
+.footer-social a {
+    text-decoration: none;
+    font-size: clamp( 18px, 3vw, 25px);
+    color: black;
+}
+.footer-social a:hover{ color: grey}
