--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 html, body {
     margin: 0; padding: 0;
     overflow-x: hidden; /* Убираем лишний горизонтальный скролл */
-    height: 100%  /* Гарантируем, что страница длиннее экрана */
-
 }
 
 *, *::before, *::after {
@@ -122,15 +120,42 @@ section, .partners_block {
     text-decoration: none;
     font-size: clamp( 18px, 3vw, 25px);
     color: black;}
-
 .wrapper{
     display: flex;
-    min-height:  100vh;
     flex-direction: column;
 }
-footer {
-  margin-top: auto; /* сдвигает футер вниз, если мало контента */
-  background-color: #f0f0f0;
+@media(min-width: 1024px) {
+    body {
+        font-size: 18px;
+    }
+    .video-container .bg-video{
+        height: 89vh !important;
+    }
+    .content{
+        font-size: 2.5vw;
+        position: relative; top: -70vh  !important;
 
-  text-align: center;
+    }
+    .partners_block{
+        flex-direction: row-reverse;
+        justify-content: space-evenly;
+    }
+    .content_2{
+        font-size: 2.0vw;
+        position: relative; top: -30vh;
+        width: 50vw; left: 1vw;
+    }
+    .contact a{
+        font-size: 1.8vw;
+        text-align: center;
+        flex-direction: column;
+        position: relative; top: -15vh; left: -62vw;
+        width: 25vw;
+    }
+    .video500, .video509{
+        width: 43vw ;
+        height: 110vh;
+        max-width: none;
+
+    }
 }
